generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef unsigned int ImU32;        
typedef struct ImFont_t ImFont;                                      
typedef struct ImGuiContext_t ImGuiContext;                                    
typedef int ImGuiCol;             
typedef int ImGuiMouseButton;     
typedef int ImGuiStyleVar;        
typedef int ImGuiColorEditFlags;    
typedef int ImGuiItemFlags;         
typedef int ImGuiSelectableFlags;   
typedef void* (*ImGuiMemAllocFunc)(size_t sz, void* user_data);           
typedef void (*ImGuiMemFreeFunc)(void* ptr, void* user_data);             
struct ImVec4_t
{
    float x, y, z, w;
};
CIMGUI_API void          ImGui_SetCurrentContext(ImGuiContext* ctx);
CIMGUI_API void             ImGui_Render(void);         
CIMGUI_API void         ImGui_PushFontFloat(ImFont* font, float font_size_base_unscaled);  
CIMGUI_API void         ImGui_PopFont(void);
CIMGUI_API void ImGui_PushStyleColor(ImGuiCol idx, ImU32 col);            
CIMGUI_API void ImGui_PopStyleColor(int count );
CIMGUI_API void ImGui_PushStyleVar(ImGuiStyleVar idx, float val);         
CIMGUI_API void ImGui_PushStyleVarX(ImGuiStyleVar idx, float val_x);      
CIMGUI_API void ImGui_PushStyleVarY(ImGuiStyleVar idx, float val_y);      
CIMGUI_API void ImGui_PopStyleVar(int count );
CIMGUI_API void ImGui_PushItemFlag(ImGuiItemFlags option, bool enabled);  
CIMGUI_API void ImGui_PopItemFlag(void);
CIMGUI_API void  ImGui_PushItemWidth(float item_width);                       
CIMGUI_API void  ImGui_PopItemWidth(void);
CIMGUI_API void  ImGui_PushTextWrapPos(float wrap_local_pos_x );  
CIMGUI_API void  ImGui_PopTextWrapPos(void);
CIMGUI_API void  ImGui_Separator(void);                        
CIMGUI_API void  ImGui_SameLine(float offset_from_start_x , float spacing ); 
CIMGUI_API void    ImGui_PushID(const char* str_id);                                   
CIMGUI_API void    ImGui_PushIDStr(const char* str_id_begin, const char* str_id_end);  
CIMGUI_API void    ImGui_PushIDPtr(const void* ptr_id);                                
CIMGUI_API void    ImGui_PushIDInt(int int_id);                                        
CIMGUI_API void    ImGui_PopID(void);                                                  
CIMGUI_API void ImGui_SeparatorText(const char* label);                                            
CIMGUI_API bool ImGui_RadioButton(const char* label, bool active);                                             
CIMGUI_API bool ImGui_RadioButtonIntPtr(const char* label, int* v, int v_button);                              
CIMGUI_API void ImGui_SetColorEditOptions(ImGuiColorEditFlags flags);                                                                       
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void  ImGui_SetColumnWidth(int column_index, float width);      
CIMGUI_API void  ImGui_SetColumnOffset(int column_index, float offset_x);  
CIMGUI_API void ImGui_PopClipRect(void);
CIMGUI_API void             ImGui_ResetMouseDragDelta(ImGuiMouseButton button );                                    
CIMGUI_API void        ImGui_SetClipboardText(const char* text);
CIMGUI_API void        ImGui_SaveIniSettingsToDisk(const char* ini_filename);                             
CIMGUI_API const char* ImGui_SaveIniSettingsToMemory(size_t* out_ini_size );                  
CIMGUI_API void  ImGui_SetAllocatorFunctions(ImGuiMemAllocFunc alloc_func, ImGuiMemFreeFunc free_func, void* user_data );
struct ImFont_t
{
    ImFontBaked*             LastBaked;                                             
    ImFontAtlas*             OwnerAtlas;                                            
    ImFontFlags              Flags;                                                 
    float                    CurrentRasterizerDensity;                              
    ImGuiID                  FontId;                                                
    float                    LegacySize;                                            
    ImVector_ImFontConfigPtr Sources;                                               
    ImWchar                  EllipsisChar;                                          
    ImWchar                  FallbackChar;                                          
    ImU8                     Used8kPagesMap[(IM_UNICODE_CODEPOINT_MAX +1)/8192/8];  
    bool                     EllipsisAutoBake;                                      
    ImGuiStorage             RemapPairs;                                            
#ifndef IMGUI_DISABLE_OBSOLETE_FUNCTIONS
    float                    Scale;                                                 
#endif 
};
CIMGUI_API void   ImGui_PushFont(ImFont* font);
CIMGUI_API void   ImGui_PushButtonRepeat(bool repeat);
CIMGUI_API void   ImGui_PopButtonRepeat(void);
CIMGUI_API void   ImGui_PushTabStop(bool tab_stop);
CIMGUI_API void   ImGui_PopTabStop(void);