generated-out/docking/dear-imgui-raw-docking/cbits/DearImGuiWrappers.h

void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLines_wrap(const char* label, const float* values, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size, int stride);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_ProgressBar_wrap(float fraction, ImVec2 const* size_arg, const char* overlay);
void ImGui_PushClipRect_wrap(ImVec2 const* clip_rect_min, ImVec2 const* clip_rect_max, bool intersect_with_current_clip_rect);
void ImGui_PushStyleColorImVec4_wrap(ImGuiCol idx, ImVec4 const* col);
void ImGui_PushStyleVarImVec2_wrap(ImGuiStyleVar idx, ImVec2 const* val);
bool ImGui_Selectable_wrap(const char* label, bool selected, ImGuiSelectableFlags flags, ImVec2 const* size);
bool ImGui_SelectableBoolPtr_wrap(const char* label, bool* p_selected, ImGuiSelectableFlags flags, ImVec2 const* size);
void ImGui_SetCursorPos_wrap(ImVec2 const* local_pos);