generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImGui.hsc


foreign import capi unsafe "DearImGuiWrappers.h ImGui_PlotHistogramCallback_wrap"
  c_imGui_PlotHistogramCallback :: CString -> (FunPtr ((Ptr ()) -> CInt -> IO CFloat)) -> (Ptr ()) -> CInt -> CInt -> CString -> CFloat -> CFloat -> (Ptr ImVec2) -> IO ()

imGui_PlotHistogramCallback :: CString -> (FunPtr ((Ptr ()) -> CInt -> IO CFloat)) -> (Ptr ()) -> CInt -> CInt -> CString -> CFloat -> CFloat -> ImVec2 -> IO ()
imGui_PlotHistogramCallback label values_getter data_ values_count values_offset overlay_text scale_min scale_max graph_size =
  with graph_size $ \_p8 -> c_imGui_PlotHistogramCallback label values_getter data_ values_count values_offset overlay_text scale_min scale_max _p8

foreign import capi unsafe "DearImGuiWrappers.h ImGui_PlotLines_wrap"
  c_imGui_PlotLines :: CString -> (Ptr CFloat) -> CInt -> CInt -> CString -> CFloat -> CFloat -> (Ptr ImVec2) -> CInt -> IO ()

imGui_PlotLines :: CString -> (Ptr CFloat) -> CInt -> CInt -> CString -> CFloat -> CFloat -> ImVec2 -> CInt -> IO ()
imGui_PlotLines label values values_count values_offset overlay_text scale_min scale_max graph_size stride =
  with graph_size $ \_p7 -> c_imGui_PlotLines label values values_count values_offset overlay_text scale_min scale_max _p7 stride

foreign import capi unsafe "DearImGuiWrappers.h ImGui_PlotLinesCallback_wrap"
  c_imGui_PlotLinesCallback :: CString -> (FunPtr ((Ptr ()) -> CInt -> IO CFloat)) -> (Ptr ()) -> CInt -> CInt -> CString -> CFloat -> CFloat -> (Ptr ImVec2) -> IO ()

imGui_PlotLinesCallback :: CString -> (FunPtr ((Ptr ()) -> CInt -> IO CFloat)) -> (Ptr ()) -> CInt -> CInt -> CString -> CFloat -> CFloat -> ImVec2 -> IO ()
imGui_PlotLinesCallback label values_getter data_ values_count values_offset overlay_text scale_min scale_max graph_size =
  with graph_size $ \_p8 -> c_imGui_PlotLinesCallback label values_getter data_ values_count values_offset overlay_text scale_min scale_max _p8

-- C: void ImGui::PopButtonRepeat()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PopButtonRepeat"
  imGui_PopButtonRepeat :: IO ()
-- C: void ImGui::PopClipRect()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PopClipRect"
  imGui_PopClipRect :: IO ()
-- C: void ImGui::PopFont()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PopFont"
  imGui_PopFont :: IO ()
-- C: void ImGui::PopID()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PopID"
  imGui_PopID :: IO ()
-- C: void ImGui::PopItemFlag()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PopItemFlag"
  imGui_PopItemFlag :: IO ()
-- C: void ImGui::PopItemWidth()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PopItemWidth"
  imGui_PopItemWidth :: IO ()
-- C: void ImGui::PopStyleColor(int count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PopStyleColor"
  imGui_PopStyleColor :: CInt -> IO ()
-- C: void ImGui::PopStyleVar(int count)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PopStyleVar"
  imGui_PopStyleVar :: CInt -> IO ()
-- C: void ImGui::PopTabStop()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PopTabStop"
  imGui_PopTabStop :: IO ()
-- C: void ImGui::PopTextWrapPos()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PopTextWrapPos"
  imGui_PopTextWrapPos :: IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_ProgressBar_wrap"
  c_imGui_ProgressBar :: CFloat -> (Ptr ImVec2) -> CString -> IO ()

imGui_ProgressBar :: CFloat -> ImVec2 -> CString -> IO ()
imGui_ProgressBar fraction size_arg overlay =
  with size_arg $ \_p1 -> c_imGui_ProgressBar fraction _p1 overlay

-- C: void ImGui::PushButtonRepeat(bool repeat)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushButtonRepeat"
  imGui_PushButtonRepeat :: CBool -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_PushClipRect_wrap"
  c_imGui_PushClipRect :: (Ptr ImVec2) -> (Ptr ImVec2) -> CBool -> IO ()

imGui_PushClipRect :: ImVec2 -> ImVec2 -> CBool -> IO ()
imGui_PushClipRect clip_rect_min clip_rect_max intersect_with_current_clip_rect =
  with clip_rect_min $ \_p0 -> with clip_rect_max $ \_p1 -> c_imGui_PushClipRect _p0 _p1 intersect_with_current_clip_rect

-- C: void ImGui::PushFont(ImFont* font)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushFont"
  imGui_PushFont :: (Ptr ImFont) -> IO ()
-- C: void ImGui::PushFont(ImFont* font, float font_size_base_unscaled)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushFontFloat"
  imGui_PushFontFloat :: (Ptr ImFont) -> CFloat -> IO ()
-- C: void ImGui::PushID(const char* str_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushID"
  imGui_PushID :: CString -> IO ()
-- C: void ImGui::PushID(int int_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushIDInt"
  imGui_PushIDInt :: CInt -> IO ()
-- C: void ImGui::PushID(const void* ptr_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushIDPtr"
  imGui_PushIDPtr :: (Ptr ()) -> IO ()
-- C: void ImGui::PushID(const char* str_id_begin, const char* str_id_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushIDStr"
  imGui_PushIDStr :: CString -> CString -> IO ()
-- C: void ImGui::PushItemFlag(ImGuiItemFlags option, bool enabled)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushItemFlag"
  imGui_PushItemFlag :: ImGuiItemFlags -> CBool -> IO ()
-- C: void ImGui::PushItemWidth(float item_width)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushItemWidth"
  imGui_PushItemWidth :: CFloat -> IO ()
-- C: void ImGui::PushStyleColor(ImGuiCol idx, ImU32 col)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushStyleColor"
  imGui_PushStyleColor :: ImGuiCol -> ImU32 -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_PushStyleColorImVec4_wrap"
  c_imGui_PushStyleColorImVec4 :: ImGuiCol -> (Ptr ImVec4) -> IO ()

imGui_PushStyleColorImVec4 :: ImGuiCol -> ImVec4 -> IO ()
imGui_PushStyleColorImVec4 idx col =
  with col $ \_p1 -> c_imGui_PushStyleColorImVec4 idx _p1

-- C: void ImGui::PushStyleVar(ImGuiStyleVar idx, float val)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushStyleVar"
  imGui_PushStyleVar :: ImGuiStyleVar -> CFloat -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_PushStyleVarImVec2_wrap"
  c_imGui_PushStyleVarImVec2 :: ImGuiStyleVar -> (Ptr ImVec2) -> IO ()

imGui_PushStyleVarImVec2 :: ImGuiStyleVar -> ImVec2 -> IO ()
imGui_PushStyleVarImVec2 idx val =
  with val $ \_p1 -> c_imGui_PushStyleVarImVec2 idx _p1

-- C: void ImGui::PushStyleVarX(ImGuiStyleVar idx, float val_x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushStyleVarX"
  imGui_PushStyleVarX :: ImGuiStyleVar -> CFloat -> IO ()
-- C: void ImGui::PushStyleVarY(ImGuiStyleVar idx, float val_y)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushStyleVarY"
  imGui_PushStyleVarY :: ImGuiStyleVar -> CFloat -> IO ()
-- C: void ImGui::PushTabStop(bool tab_stop)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushTabStop"
  imGui_PushTabStop :: CBool -> IO ()
-- C: void ImGui::PushTextWrapPos(float wrap_local_pos_x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_PushTextWrapPos"
  imGui_PushTextWrapPos :: CFloat -> IO ()
-- C: bool ImGui::RadioButton(const char* label, bool active)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_RadioButton"
  imGui_RadioButton :: CString -> CBool -> IO CBool
-- C: bool ImGui::RadioButton(const char* label, int* v, int v_button)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_RadioButtonIntPtr"
  imGui_RadioButtonIntPtr :: CString -> (Ptr CInt) -> CInt -> IO CBool
-- C: void ImGui::Render()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Render"
  imGui_Render :: IO ()
-- C: void ImGui::RenderPlatformWindowsDefault(void* platform_render_arg, void* renderer_render_arg)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_RenderPlatformWindowsDefault"
  imGui_RenderPlatformWindowsDefault :: (Ptr ()) -> (Ptr ()) -> IO ()
-- C: void ImGui::ResetMouseDragDelta(ImGuiMouseButton button)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ResetMouseDragDelta"
  imGui_ResetMouseDragDelta :: ImGuiMouseButton -> IO ()
-- C: void ImGui::SameLine(float offset_from_start_x, float spacing)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SameLine"
  imGui_SameLine :: CFloat -> CFloat -> IO ()
-- C: void ImGui::SaveIniSettingsToDisk(const char* ini_filename)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SaveIniSettingsToDisk"
  imGui_SaveIniSettingsToDisk :: CString -> IO ()
-- C: const char* ImGui::SaveIniSettingsToMemory(size_t* out_ini_size)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SaveIniSettingsToMemory"
  imGui_SaveIniSettingsToMemory :: (Ptr CSize) -> IO CString
foreign import capi unsafe "DearImGuiWrappers.h ImGui_Selectable_wrap"
  c_imGui_Selectable :: CString -> CBool -> ImGuiSelectableFlags -> (Ptr ImVec2) -> IO CBool

imGui_Selectable :: CString -> CBool -> ImGuiSelectableFlags -> ImVec2 -> IO CBool
imGui_Selectable label selected flags size =
  with size $ \_p3 -> c_imGui_Selectable label selected flags _p3

foreign import capi unsafe "DearImGuiWrappers.h ImGui_SelectableBoolPtr_wrap"
  c_imGui_SelectableBoolPtr :: CString -> (Ptr CBool) -> ImGuiSelectableFlags -> (Ptr ImVec2) -> IO CBool

imGui_SelectableBoolPtr :: CString -> (Ptr CBool) -> ImGuiSelectableFlags -> ImVec2 -> IO CBool
imGui_SelectableBoolPtr label p_selected flags size =
  with size $ \_p3 -> c_imGui_SelectableBoolPtr label p_selected flags _p3

-- C: void ImGui::Separator()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Separator"
  imGui_Separator :: IO ()
-- C: void ImGui::SeparatorText(const char* label)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SeparatorText"
  imGui_SeparatorText :: CString -> IO ()
-- C: void ImGui::SetAllocatorFunctions(ImGuiMemAllocFunc alloc_func, ImGuiMemFreeFunc free_func, void* user_data)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetAllocatorFunctions"
  imGui_SetAllocatorFunctions :: ImGuiMemAllocFunc -> ImGuiMemFreeFunc -> (Ptr ()) -> IO ()
-- C: void ImGui::SetClipboardText(const char* text)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetClipboardText"
  imGui_SetClipboardText :: CString -> IO ()
-- C: void ImGui::SetColorEditOptions(ImGuiColorEditFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetColorEditOptions"
  imGui_SetColorEditOptions :: ImGuiColorEditFlags -> IO ()
-- C: void ImGui::SetColumnOffset(int column_index, float offset_x)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetColumnOffset"
  imGui_SetColumnOffset :: CInt -> CFloat -> IO ()
-- C: void ImGui::SetColumnWidth(int column_index, float width)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetColumnWidth"
  imGui_SetColumnWidth :: CInt -> CFloat -> IO ()
-- C: void ImGui::SetCurrentContext(ImGuiContext* ctx)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SetCurrentContext"
  imGui_SetCurrentContext :: (Ptr ImGuiContext) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_SetCursorPos_wrap"
  c_imGui_SetCursorPos :: (Ptr ImVec2) -> IO ()

imGui_SetCursorPos :: ImVec2 -> IO ()
imGui_SetCursorPos local_pos =
  with local_pos $ \_p0 -> c_imGui_SetCursorPos _p0
